if they are aborted, no changes will have been made to the database and users should view the
report log to determine if they pressed abort in time (any changes can still be undone as normal).
[] Portuguese (Brazil) installation instructions added, thanks to Andreas.

Changes to Existing Features in 3.28.1
======================================
None

Bugs fixed in 3.28.1
====================
[3523117] Password Expiration Date now correctly set when using intervals.
[3521158] Paste into the Notes field (Add or Edit entry) is now always in plain text.
[3518734] When generating passwords (Ctrl-P), the user is no longer prompted to save
changes when pressing Esc if they have selected a Named Password Policy but not generated
a password.
[3518732] Custom special symbol set now handled correctly in Generate Password
dialog box.
[3518389] All date/time fields in the List view are now displayed using the user's
"short date" format as specified via the Windows Control Panel "Region and Language" tab.
[3515692] Fixed crash with Generate Password switching to default policy with > 1
named policy.
[3514819] Add Group now works again.
[3510590] Password History is now correctly repaired if found in error during the
automatic Validate on database open.
[3508891] Editing an entry's Notes using an external editor no longer adds blank lines
and fully supports non-Latin characters.
[3498625] Test selected password policy now reflects any edits done to the policy.
[3495473] Notes Word Wrap during edit now works again.

New Features for 3.28
=====================
[3468289] The passwords in the Password History and in the List view now
displayed with the specified Password Font. In addition, you can now zoom
in and out of the Notes field, for easy reading of texts.
[3455436] The password history can now be deleted for all existing entries
in a database at once (optionally including Protected Entries).
[3421963] Multiple Password Policies can now be defined, managed and