@@ -110,7 +110,10 @@ report log to determine if they pressed abort in time (any changes can still be 
 
 <table>
 <tbody>
-
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3525995);return false;">3525995</a></td>
+<td>Find now only highlights/select the found entry.</td>
+</tr>
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3523117);return false;">3523117</a></td>
 <td>Password Expiration Date now correctly set when using intervals.</td>
